--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="./Burgeris 404.jpg" alt="Burgeris">
+    <div>
+        <img src="./Burgeris 404.jpg" alt="Burgeris">
         <h1>Whoops! The page  you're looking for can't be found. Thanks for coming!</h1>
-    
+    </div>
 </body>
 </html>
